styles.css
#main-navbar {
  background-color: blue;
  overflow: hidden;
}
#navbar-container {
  float: left;
  width: 100%;
  position: relative;
}
#main-navbar ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  position: relative;
  left: 50%;
  float: left;
}
#main-navbar ul li  {
   float: left;
   postition: relative;   
   right: 50%
   display: block;
}
#main-navbar ul li a {
	 display: block;
	 padding: 10px 20px;
	 color: #fff;
	 text-decoration: none;
}
#main-navbar ul li a:hover {
  background-color: #000;
}
#onpage {
  text-decoration: underline overline;
}
#sidebar {
  position: fixed;
  right:0%;
  background-color: red;
  height: 100%;
  width: 20%;
}
#sidebar ul {
  list-style-type: none;
  text-align: center;
  padding: 0;
}
#sidebar ul li a {
  display: block;
  padding: 15px 0;
  color: #fff;
  text-decoration: none;
}
sidebar ul li a:hover {
	background-color: #000;
}

